--- a/src/app/user/post/post.component.scss
+++ b/src/app/user/post/post.component.scss
@@ -28,8 +28,7 @@
             color: white;
             margin-right: 10px;
             margin-top: 10px;
-            border: 3px solid var(--colorBackgroundSecondary);
-            // box-shadow: 0 0 5px rgba(0, 0, 0, 0.178) inset;
+            border: var(--borderWidthSmall) solid var(--colorBackgroundSecondary);
             border-radius: 10px;
 
             &.active{
