--- a/src/app/user/posts/posts.component.scss
+++ b/src/app/user/posts/posts.component.scss
@@ -1,13 +1,3 @@
-/*
-<div class="posts-popular">
-    <div class="posts-popular-wrap">
-        <div class="post-big"></div>
-        <div class="post-small"></div>
-        <div class="post-small"></div>
-        <div class="post-big"></div>
-    </div>
-</div>
-*/
 
 .posts-popular{
     width: 100%;
@@ -19,7 +9,6 @@
 
     .posts-popular-wrap{
         width: 100%;
-        // min-height: 800px;
         display: flex;
         flex-wrap: wrap;
         color: var(--colorBackground);
@@ -57,10 +46,8 @@
 
         @for $i from 1 through 4 {
             .post:nth-of-type(#{$i}) {
-                // background: linear-gradient(var(--colorAccent#{$i}), black);
                 background-color: var(--colorAccent#{$i});
-                // border-right: 14px solid var(--colorAccent#{$i}); 
-                // border-color: var(--colorAccent#{$i});
+
                 .titl{
                     &::first-letter{
                         color: var(--colorAccent#{$i});
@@ -71,9 +58,7 @@
 
         > div{
             flex: 1 0 20rem;
-            // height: 100%;
             height: calc(300px + 40vh);
-            // border: 1px solid black;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -82,10 +67,6 @@
 
         .post-big{
             background-color: greenyellow;
-        }
-
-        .posts-small{
-            
         }
 
         .post-small{
@@ -127,19 +108,17 @@
         .input-box{
             position: relative;
             input{
-                $border-width: 3px;
                 width: 100%;
                 padding: 16px;
                 font-size: 32px;
                 color: white;
                 background-color: var(--colorBackground);
-                // box-shadow: 0 0 10px rgba(0, 0, 0, 0.301) inset;
-                border: $border-width solid var(--colorBackgroundSecondary);
+                border: var(--borderWidthSmall) solid var(--colorBackgroundSecondary);
                 transition: 0.2s ease;
                 border-radius: 10px;
 
                 &:focus{
-                    border: $border-width solid white;
+                    border: var(--borderWidthSmall) solid white;
                     box-shadow: none;
                 }
     
@@ -166,8 +145,7 @@
                 color: white;
                 margin-right: 10px;
                 margin-top: 10px;
-                border: 3px solid var(--colorBackgroundSecondary);
-                // box-shadow: 0 0 5px rgba(0, 0, 0, 0.178) inset;
+                border: var(--borderWidthSmall) solid var(--colorBackgroundSecondary);
                 border-radius: 10px;
 
                 &.active{
@@ -186,7 +164,7 @@
         grid-auto-flow: dense;
 
         .post{
-            border: 3px solid var(--colorBackgroundSecondary);
+            border: var(--borderWidthSmall) solid var(--colorBackgroundSecondary);
             position: relative;
             grid-column: span 1;
             grid-row: span 1;
@@ -206,7 +184,6 @@
             }
 
             @for $i from 1 through 4 {
-                //&.color-#{$i} {
                 &:nth-of-type(#{$i}n){
                     .read{
                         color: var(--colorAccent + #{$i});   
@@ -217,7 +194,6 @@
 
             &:hover{
                 @for $i from 1 through 4 {
-                    //&.color-#{$i} {
                     &:nth-of-type(#{$i}n){
                         border-color: var(--colorAccent + #{$i});  
                         .read{
