--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ body{
     /* Track */
     &::-webkit-scrollbar-track {
         box-shadow: inset 0 0 5px rgb(46, 46, 46); 
-        border-radius: 5px;
+        // border-radius: 5px;
     }
     
     /* Handle */
@@ -56,6 +56,9 @@ html{
     --colorAccent2: #00FFEE;
     --colorAccent3: rgb(0, 255, 55);
     --colorAccent4: rgb(251, 255, 0);
+
+    --borderWidthSmall: 3px;
+    --borderWidthMedium: 6px;
 }
 
 input, textarea, button{
